# DTN-RPC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  README.md  aclocal.m4  cJSON.c  config.status  configure  configure.ac  helpers.c  lib_objs  main.c  make-lib.sh  obj_files  reference_implementation.md  rpc.h  rpc_client.c  rpc_client.h  rpc_client_mdp.c  rpc_client_msp.c  rpc_client_rhizome.c  rpc_curl_helpers.c  rpc_helpers.c  rpc_helpers.h  rpc_server.c  rpc_server.h  rpc_server_mdp.c  rpc_server_msp.c  rpc_server_rhizome.c  runme  sourcefiles.mk
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
doc/: servalrpc.md  technology.md  testing.md
includes/: rpc.h  rpc_client.h  rpc_helpers.h  rpc_server.h  trigger.h
includes/serval/: rhizome.h
includes/serval/nacl/: nacl.h
src/: Makefile  Makefile.in  cJSON.c  main.c  rpc_client.c  rpc_client_mdp.c  rpc_client_msp.c  rpc_client_rhizome.c  rpc_helpers.c  rpc_server.c  rpc_server_mdp.c  rpc_server_msp.c  rpc_server_rhizome.c
